Add slider input

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <body>
         <main>
             <h1>Etch-A-Sketch</h1>
+            <h2>Grid Dimension:</h2>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="90" value="20" class="slider" id="sizeRange">
+            </div>
             <div class = "color-selections">
                 <button class = "black">BLACK</button>
                 <button class = "red">RED</button>
                 <button class = "rgb">RGB</button>
+                <button class = "eraser">ERASER</button>
                 <button class = "clear">CLEAR</button>
             </div>
             <div class = "container">
