--- a/index.html
+++ b/index.html
@@ -9,27 +9,17 @@
     <body>
         <main>
             <h1>Etch-A-Sketch</h1>
-            <h2>Grid Dimension:</h2>
             <div class="slidecontainer">
-                <input type="range" min="1" max="90" value="20" class="slider" id="sizeRange">
+                <input type="range" min="1" max="64" value="20" class="slider" id="sizeRange">
             </div>
             <div class = "color-selections">
-                <button class = "black">BLACK</button>
-                <button class = "red">RED</button>
+                <button class = "black">GRAY</button>
+                <button class = "red">BLUE</button>
                 <button class = "rgb">RGB</button>
                 <button class = "eraser">ERASER</button>
                 <button class = "clear">CLEAR</button>
             </div>
-            <div class = "container">
-                <!-- <div class = "item1">1</div>
-                <div class = "item2">2</div>
-                <div class = "item3">3</div>
-                <div class = "item4">4</div>
-                <div class = "item5">5</div>
-                <div class = "item6">6</div>
-                <div class = "item7">7</div>
-                <div class = "item8">8</div> -->
-            </div>
+            <div class = "container"></div>
         </main>
     <footer>
         <a href="https://github.com/prguevarra">created by prguevarra</a> 
